Added Basic Styling

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 
 <div class="container">
 	<h1>Palette</h1>
+
+	<hr>
+
+	<form>
+		<label for="">Project Name</label>
+		<input type="text">
+		<label for="">Instrument</label>
+		<input type="text">
+		<input type="submit">
+	</form>
+
+	<hr>
+
+	<div class="project-detail">
+		<h3>BMW</h3>
+		<ul>
+			<li>Guitar</li>
+			<li>Bass</li>
+			<li>Drums</li>
+			<li>Keys</li>
+		</ul>
+	</div>
+
 </div>
 
 <script src="main.js"></script>	
