--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 	<hr>
 
-	<form>
-		<label for="">Project Name</label>
-		<input type="text">
-		<label for="">Instrument</label>
-		<input type="text">
+	<form id="input-form">
+		<label for="project-name">Project Name</label>
+		<input type="text" id="project-name">
+		<label for="instrument-name">Instrument</label>
+		<input type="text" id="instrument-name">
 		<input type="submit">
 	</form>
 
