--- a/index.html
+++ b/index.html
@@ -12,23 +12,21 @@
 
 	<hr>
 
-	<form id="input-form">
+	<form id="project-name-input-form">
 		<label for="project-name">Project Name</label>
-		<input type="text" id="project-name">
-		<label for="instrument-name">Instrument</label>
-		<input type="text" id="instrument-name">
+		<input type="text" id="project-name" placeholder="Add Project Name...">
 		<input type="submit">
 	</form>
 
 	<hr>
 
 	<div class="project-detail">
-		<h3>BMW</h3>
+		<!-- <h3>BMW</h3> -->
+		<form id="instrument-input-form">
+			<input type="text" id="instrument-name" placeholder="Add Instrument...">
+			<input type="submit">
+		</form>
 		<ul>
-			<li>Guitar</li>
-			<li>Bass</li>
-			<li>Drums</li>
-			<li>Keys</li>
 		</ul>
 	</div>
 
