Basic LocalStorage Working

--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
 
 	<hr>
 
+	<form id="instrument-input-form">
+		<input type="text" id="instrument-name" placeholder="Add Instrument...">
+		<input type="submit">
+	</form>
+
+
 	<div class="project-detail">
-		<!-- <h3>BMW</h3> -->
-		<form id="instrument-input-form">
-			<input type="text" id="instrument-name" placeholder="Add Instrument...">
-			<input type="submit">
-		</form>
 		<ul>
 		</ul>
 	</div>
+
+	<button id="done-btn">Done</button>
+	<button id="clear-btn">Clear</button>
 
 </div>
 
